--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,14 @@ dependencies:
       url: https://github.com/oliverbytes/flutter_appauth.git
       path: flutter_appauth
   flutter_hooks: ^0.20.3
+  flutter_secure_storage: ^9.0.0
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   google_fonts: ^6.1.0
   hooks_riverpod: ^2.4.4
   intl: ^0.18.1
   json_annotation: ^4.8.1
+  pedantic_mono: ^1.24.0+1
   riverpod_annotation: ^2.2.1
   supabase_flutter: ^1.10.23
 
@@ -38,7 +40,6 @@ dev_dependencies:
   freezed: ^2.4.1
   go_router_builder: ^2.2.4
   json_serializable: ^6.7.1
-  pedantic_mono: ^1.23.0
   riverpod_generator: ^2.2.4
   riverpod_lint: ^1.4.0
 
