--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,8 @@ analyzer:
     - custom_lint
   errors:
     invalid_annotation_target: ignore
+  exclude:
+    - lib/**.g.dart
 
 linter:
   rules:
