--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
+  adaptive_dialog: ^1.9.0+2
+  collection: ^1.17.2
   cupertino_icons: ^1.0.2
   dynamic_color: ^1.6.8
   email_validator: ^2.1.17
